feat:implement get all employees fuction